# online-store

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_17_2101-5bc510dea09b_initial_migration.py  2025_06_19_1654-612376cd4e56_add_user_table.py  2025_06_21_2121-7b6a90768446_add_product_table.py  2025_06_25_0940-46c8081e9dac_add_new_cart_table.py
app/: main.py
app/api/: __init__.py
app/api/admin/: endpoint.py
app/api/products/: endpoint.py  service.py  shema.py
app/api/security/: dependencies.py  endpoint.py  service.py  shema.py  utils.py
app/api/user/: endpoint.py  service.py  shema.py
app/core/: config.py  logger.py
app/database/: __init__.py  mixin.py  models.py  session.py
test/: conftest.py  test_config.py  test_databese.py  test_main.py
test/core/: test_config.py
